Added reset password api
